--- a/Russian/main/InCallUI.apk/res/values-ru/strings.xml
+++ b/Russian/main/InCallUI.apk/res/values-ru/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="accept_modify_call_request_prompt">Разрешить изменить запрос вызова?</string>
+	 <string name="close_camera_failed">Не удалось закрыть камеру</string>
+     <string name="close_camera_requesting">Требуется закрыть камеру</string>
 	 <string name="call_button_conference_manager_text">Менеджер конференции</string>
      <string name="call_button_mute_text">Без звука</string>
-     <string name="card_title_in_video">Видео </string>
+     <string name="card_title_in_video">Видео</string>
      <string name="card_title_video_conf_call">Видео конференц-звонок</string>
      <string name="card_video_hold_swap">Сменить</string>
      <string name="video_conference_caller_info_name">"%1$s видео конференц-звонок"</string>
